[package]
name = "fails_to_compile"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fail_on_ci = { git = "https://github.com/hardliner66/fail_on_ci.git" }
